--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=YummyPet
-spring.datasource.url=jdbc:mysql://localhost:3306/yummypet_shop
+spring.datasource.url=jdbc:mysql://localhost:3306/yummypet_db
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
